fix(columns): layout issue

--- a/express/blocks/columns/columns.css
+++ b/express/blocks/columns/columns.css
@@ -66,7 +66,6 @@ main .columns .social.icon {
   main .columns > div {
     flex-direction: row;
     text-align: left;
-    align-items: baseline;
   }
 
   main .section-wrapper div.columns > div > div {
